--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -54,6 +54,7 @@
   "instagram": "Instagram",
   "facebook": "Facebook",
   "copyright": "Copyright © 2024 CUSI. Tutti i diritti riservati.",
+  "copyright2": "© 2024 CUSI. Tutti i diritti riservati.",
   "privacyPolicy": "Privacy Policy",
   "cookiePolicy": "Cookie Policy",
   "legal": "Note Legali"
