--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -58,7 +58,41 @@
   "privacyPolicy": "Privacy Policy",
   "cookiePolicy": "Cookie Policy",
   "legal": "Note Legali"
-}
+},
+"maison": {
+    "boutiques": "Boutiques",
+    "welcomeMessage": "Saremo lieti di accogliervi affinché possiate scoprire e provare le vostre creazioni preferite.",
+    "milano": "Milano",
+    "viaMontenapoleone": "Via Montenapoleone 21/A, 20121, Italia",
+    "mondayToSaturday": "Lunedì - Sabato",
+    "openingHours1": "10:30-13:30",
+    "openingHours2": "15:00-19:00",
+    "contactUs": "Contattaci",
+    "milanoPhoneNumber": "(+39) 0276014323",
+    "portofino": "Portofino",
+    "calataMarconi": "Calata Marconi 14, 16034 Italia",
+    "portofinoPhoneNumber": "(+39) 0373214621",
+    "bookAppointment": "Prenota un appuntamento",
+    "staffResponse": "Il nostro staff risponderà da lunedì a venerdì dalle 9 alle 19 e il sabato dalle 9 alle 17.",
+    "title": "Titolo*",
+    "mr": "Sig.",
+    "miss": "Sig.na/ra",
+    "notSay": "Non specificato",
+    "firstName": "Nome*",
+    "lastName": "Cognome*",
+    "email": "E-mail*",
+    "phoneNumber": "Numero di telefono*",
+    "selectBoutique": "Seleziona Boutique*",
+    "cusiMontenapoleone": "Cusi Montenapoleone",
+    "cusiPortofino": "Cusi Portofino",
+    "appointmentDate": "Data dell'appuntamento*",
+    "time": "Ora*",
+    "product": "Prodotto*",
+    "message": "Messaggio*",
+    "newsletter": "Iscrivimi alla newsletter",
+    "privacyPolicy": "Accetto la Privacy Policy.",
+    "book": "PRENOTA"
+  }
 
 
 
