--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -19,102 +19,129 @@
     "welcomeYou": "Saremo lieti di accoglierti per farti scoprire e provare le nostre creazioni preferite.",
     "bookAnAppointment": "PRENOTA UN APPUNTAMENTO"
   },
+    "navbar": {
+     "shop": "Negozio",
+     "collections": "Collezioni",
+     "about": "Chi Siamo",
+     "highjewellery": "ALTA GIOIELLERIA",
+     "fineobject":"ARGENTI",
+     "gifts":"REGALI",
+     "bracelets":"Bracciali",
+     "rings":"Anelli",
+     "necklaces":"Collane",
+     "earrings":"Orecchini"
+    },
   "shoppinglist": {
     "earrings": "ORECCHINI",
-    "bracelets": "BRACCIALETTI",
+    "bracelets": "BRACCIALI",
     "necklaces": "COLLANE",
     "rings": "ANELLI",
     "curatedPieces": "Selezione Esclusiva",
     "soonToBeStaples": "Scopri le nostre preziose creazioni",
     "artisanalGoldEarrings": "Orecchini in Oro Artigianali,<br> Unicamente Realizzati.",
     "shopEarrings": "ACQUISTA ORECCHINI",
-    "handcraftedGoldBracelets": "Braccialetti dalle <br> eleganti forme uniche",
-    "shopBracelets": "ACQUISTA BRACCIALETTI",
+    "handcraftedGoldBracelets": "Bracciali dalle <br> eleganti forme uniche",
+    "shopBracelets": "ACQUISTA BRACCIALI",
     "rareDiamondsGemstones": "Diamanti e Pietre Preziose <br> con Montature Uniche.",
     "shopNecklaces": "ACQUISTA COLLANE",
     "uniqueLuxuryRings": "Anelli di Lusso Unici<br> con Eleganza Rara.",
     "shopRings": "ACQUISTA ANELLI"
   },
-"footer": {
-  "signUpToOurNewsletter": "ISCRIVITI ALLA NOSTRA NEWSLETTER",
-  "beTheFirstToHear": "Scopri i nuovi arrivi e altre straordinarie novità dal mondo di Cusi.",
-  "customerService": "SERVIZIO CLIENTI",
-  "ourServices": "I Nostri Servizi",
-  "productCare": "Cura del Prodotto",
-  "shippingReturns": "Spedizione e Resi",
-  "sizeChart": "Tabella delle Taglie",
-  "faq": "Domande frequenti",
-  "subscribe": "ISCRIVITI",
-  "yourEmail": "La tua e-mail",
-  "contact": "CONTATTACI",
-  "contact2": "Contattaci",
-  "bookAnAppointment": "Prenota un Appuntamento",
-  "boutiques": "Boutiques",
-  "social": "SOCIAL",
-  "instagram": "Instagram",
-  "facebook": "Facebook",
-  "copyright": "Copyright © 2024 CUSI. Tutti i diritti riservati.",
-  "copyright2": "© 2024 CUSI. Tutti i diritti riservati.",
-  "privacyPolicy": "Privacy Policy",
-  "cookiePolicy": "Cookie Policy",
-  "legal": "Note Legali"
-},
-"maison": {
+  "footer": {
+    "signUpToOurNewsletter": "ISCRIVITI ALLA NOSTRA NEWSLETTER",
+    "beTheFirstToHear": "Scopri i nuovi arrivi e altre straordinarie novità dal mondo di Cusi.",
+    "customerService": "SERVIZIO CLIENTI",
+    "ourServices": "I Nostri Servizi",
+    "productCare": "Cura del Prodotto",
+    "shippingReturns": "Spedizione e Resi",
+    "sizeChart": "Tabella delle Taglie",
+    "faq": "Domande frequenti",
+    "subscribe": "ISCRIVITI",
+    "yourEmail": "La tua e-mail",
+    "contact": "CONTATTACI",
+    "contact2": "Contattaci",
+    "bookAnAppointment": "Prenota un Appuntamento",
     "boutiques": "Boutiques",
-    "welcomeMessage": "Saremo lieti di accogliervi affinché possiate scoprire e provare le vostre creazioni preferite.",
-    "milano": "Milano",
-    "viaMontenapoleone": "Via Montenapoleone 21/A, 20121, Italia",
-    "mondayToSaturday": "Lunedì - Sabato",
-    "openingHours1": "10:30-13:30",
-    "openingHours2": "15:00-19:00",
-    "contactUs": "Contattaci",
-    "milanoPhoneNumber": "(+39) 0276014323",
-    "portofino": "Portofino",
-    "calataMarconi": "Calata Marconi 14, 16034 Italia",
-    "portofinoPhoneNumber": "(+39) 0373214621",
-    "bookAppointment": "Prenota un appuntamento",
-    "staffResponse": "Il nostro staff risponderà da lunedì a venerdì dalle 9 alle 19 e il sabato dalle 9 alle 17.",
-    "title": "Titolo*",
-    "mr": "Sig.",
-    "miss": "Sig.na/ra",
-    "notSay": "Non specificato",
-    "firstName": "Nome*",
-    "lastName": "Cognome*",
-    "email": "E-mail*",
-    "phoneNumber": "Numero di telefono*",
-    "selectBoutique": "Seleziona Boutique*",
-    "cusiMontenapoleone": "Cusi Montenapoleone",
-    "cusiPortofino": "Cusi Portofino",
-    "appointmentDate": "Data dell'appuntamento*",
-    "time": "Ora*",
-    "product": "Prodotto*",
-    "message": "Messaggio*",
-    "newsletter": "Iscrivimi alla newsletter",
-    "privacyPolicy": "Accetto la Privacy Policy.",
-    "book": "PRENOTA"
+    "social": "SOCIAL",
+    "instagram": "Instagram",
+    "facebook": "Facebook",
+    "copyright": "Copyright © 2024 CUSI. Tutti i diritti riservati.",
+    "copyright2": "© 2024 CUSI. Tutti i diritti riservati.",
+    "privacyPolicy": "Privacy Policy",
+    "cookiePolicy": "Cookie Policy",
+    "legal": "Note Legali"
   },
-    "story": {
-      "maisonCusi": "Maison Cusi",
-      "intro": "La storica gioielleria fondata nel 1886 da Annibale Cusi ha segnato l'inizio di un'era che dura da cinque generazioni. In questi 131 anni, Cusi è diventato uno dei nomi più prestigiosi tra i gioiellieri italiani.",
-      "1886": "1886",
-      "birth": "Nascita del marchio Cusi",
-      "birthDescription1": "Annibale Cusi cominciò a lavorare in giovanissima età come garzone di bottega, allora il mestiere si insegnava praticando fin dalla prima infanzia lavorando a stretto contatto con gli artigiani orafi. Per Annibale non fu diverso, iniziò a soli 9 anni e presto acquisì una certa esperienza, distinguendosi per le sue spiccate doti artistiche e abilità artigiane.",
-      "birthDescription2": "Il lungo periodo passato dietro ai banchi orafi permise al giovane di far proprio il mestiere, maturando in se anche quel coraggio e abilità imprenditoriale che a soli 23 anni e più precisamente nel 1886 lo spinsero a lasciare la bottega ed aprire un proprio laboratorio in via della Farine nel pieno centro di Milano a pochi passi dal Duomo e dal Teatro alla Scala.",
-      "quote": "Ogni gioiello ha la sua storia e rappresenta il lusso di oggi e con esso il tempo che dedichiamo a noi stessi. Qualunque oggetto tu scelga, sarà tuo, unico e irripetibile, come la tua vita.",
-      "wellBroochDescription1": "Nel proprio Atelier di Via delle Farine al numero 8 il giovane Annibale getterà le fondamenta che lo porteranno in pochi anni a fare del marchio Cusi uno dei brand più apprezzati dall’aristocrazia e dalla nobiltà Milanese.",
-      "wellBroochDescription2": "Il fervente arrivo dell’Art Nouveau a fine 800 rivitalizzò l’arte della gioielleria, riferendosi alla natura come principale soggetto ispiratore. In Europa fu una vera e propria rivoluzione dell’arte e a Milano lo stile Liberty non si fece attendere. Cusi in quegl’anni di bellezza da vita a collezioni di gioielli uniche e straordinarie, utilizzando materiali innovativi e gemme di colore rare.",
-      "wellBroochLight": "A sinistra, la famosa Spilla del Pozzo in platino e diamanti, insieme al suo design, creata da Annibale e ancora affettuosamente conservata dalla famiglia Cusi.",
-      "maryStuartNecklaceTitle": "La Collana di Maria Stuarda",
-      "maryStuartNecklaceDescription": "Nel 1906 Milano fu protagonista dell’Esposizione Internazionale, un vero successo, parteciparono infatti 40 stati e la città fu visitata da quasi 5 milioni di persone, un vero record per l’epoca. Nella sezione delle Arti Decorative Cusi espose i suoi gioielli, e vinse il Gran Premio grazie ad un capolavoro dell’arte orafa, il collier chiamato “Maria Stuarda”, un’opera che richiese due anni di lavoro da parte degli artigiani della bottega, che la realizzarono in “Platiuralium” una speciale lega inventata da Cusi composta da platino, oro, argento e alluminio con caratteristiche di leggerezza uniche. Il “Colletto” era tempestato di circa 15000 diamanti, perle e rubini. L’architettura era complessa in quanto tutte le parti erano snodate e permettevando quindi movimenti articolati. Chi scrisse su di essa la definì, nonostante l’imponenza, leggera come un pizzo.",
-      "viaClericiTitle": "Via Clerici, 1",
-      "viaClericiDescription": "Dopo la dolorosa parentesi della grande guerra 1915-18, Annibale CUSI divenuto ormai un esperto di fama internazionale nel campo delle pietre preziose e delle perle, riprese con rinnovata energia la sua attività e presto fu necessario ingrandirsi. Così che nel 1922 Annibale ed il figlio Rinaldo allora ventisettenne, fecero costruire in via Clerici 1 l’elegante Palazzo CUSI, sede propria della famiglia, dell’atelier di vendita e dei laboratori di produzione. Nel 1921 Annibale fu proclamato Cavaliere del Lavoro.",
-      "rinaldoCusiTitle": "Rinaldo Cusi",
-      "rinaldoCusiDescription": "Il marchio CUSI, nel ventennio del XX secolo fu apprezzato non solo dalle più importanti famiglie dell’aristocrazia milanese, ma anche dalla Famiglia Reale Italiana, tanto da vantare numerose collaborazioni per il Re,Vittorio Emanuele III, con S.A.R. Vittorio Emanuele il Conte di Torino ed il Duca di Aosta Amedeo di Savoia. I tre stemmi reali in quegl’anni decorano la carta intestata e il logo della Gioielleria Cusi.\n\nRinaldo seppe con grande abilità e carisma esportare il nostro stile anche all’estero, dove il mercato internazionale rispose con ampio consenso. Da sempre grande esperto e collezionista di gioielli, gemme preziose, ma sopratutto di perle, cedette in età al figlio Roberto CUSI il timone dell’azienda.",
-      "robertoCusiTitle": "Roberto Cusi",
-      "robertoCusiDescription": "Con Roberto CUSI (1926 – 1996), l’azienda si consolida e nel 1964 viene innaugurata l’esclusiva sede di Portofino, e dopo soli due anni anche l’attuale sede di Milano in via Montenapoleone al numero 21, location simbolo per eccellenza della moda e del lusso nel mondo. Successivamente nel 2004 nella filiale di Portofino CUSI diventa concessionario ufficiale ROLEX e nel 2013 vi dedica interamente un Atelier accanto alla propria gioielleria.",
-      "familyTitle": "La tradizione Cusi continua con le nuove generazioni.",
-      "familyIntro": "La storica gioielleria fondata nel 1886 da Annibale Cusi ha segnato l'inizio di un'era che dura da cinque generazioni; in questi 131 anni, Cusi è diventato uno dei nomi più prestigiosi tra i gioiellieri italiani.",
-      "familyDescription": "Oggi la tradizione della famiglia prosegue grazie all’impegno e la passione di Giorgio Nicola Cusi, della moglie Roberta Cusi e dei figli Alessia e Alessandro. Cusi non è solo un nome: è passione, professionalità, sicurezza, tradizione, è qualcosa di familiare; il nostro scopo è quello di far sentire i nostri clienti come a casa.\n\nQuesta breve retrospettiva che racconta la storia, l’evoluzione del concetto di gioielleria e di quanto siamo legati alla tradizione, mantenendo sì la qualità del passato, ma introducendo via via una prospettiva di attualità e design.‍L’alta gioielleria italiana basata su tradizione e innovazione, che si può ammirare nelle sedi di via Montenapoleone e di Portofino, fonde in sé le massime espressioni d’arte quali il disegno, la progettazione, la lavorazione artigianale, la cura del dettaglio e in più la ricerca di gemme rare provenienti dai più remoti angoli della terra. E’ con questa filosofia che la famiglia Cusi vuole tramandare la tradizione alle nuove generazioni."
-    }
+  "maison": {
+      "boutiques": "Boutiques",
+      "welcomeMessage": "Saremo lieti di accogliervi affinché possiate scoprire e provare le vostre creazioni preferite.",
+      "milano": "Milano",
+      "viaMontenapoleone": "Via Montenapoleone 21/A, 20121, Italia",
+      "mondayToSaturday": "Lunedì - Sabato",
+      "openingHours1": "10:30-13:30",
+      "openingHours2": "15:00-19:00",
+      "contactUs": "Contattaci",
+      "milanoPhoneNumber": "(+39) 0276014323",
+      "portofino": "Portofino",
+      "calataMarconi": "Calata Marconi 14, 16034 Italia",
+      "portofinoPhoneNumber": "(+39) 0373214621",
+      "bookAppointment": "Prenota un appuntamento",
+      "staffResponse": "Il nostro staff risponderà da lunedì a venerdì dalle 9 alle 19 e il sabato dalle 9 alle 17.",
+      "title": "Titolo*",
+      "mr": "Sig.",
+      "miss": "Sig.na/ra",
+      "notSay": "Non specificato",
+      "firstName": "Nome*",
+      "lastName": "Cognome*",
+      "email": "E-mail*",
+      "phoneNumber": "Numero di telefono*",
+      "selectBoutique": "Seleziona Boutique*",
+      "cusiMontenapoleone": "Cusi Montenapoleone",
+      "cusiPortofino": "Cusi Portofino",
+      "appointmentDate": "Data dell'appuntamento*",
+      "time": "Ora*",
+      "product": "Prodotto*",
+      "message": "Messaggio*",
+      "newsletter": "Iscrivimi alla newsletter",
+      "privacyPolicy": "Accetto la Privacy Policy.",
+      "book": "PRENOTA"
+  },
+  "story": {
+    "maisonCusi": "Maison Cusi",
+    "intro": "La storica gioielleria fondata nel 1886 da Annibale Cusi ha segnato l'inizio di un'era che dura da cinque generazioni. In questi 131 anni, Cusi è diventato uno dei nomi più prestigiosi tra i gioiellieri italiani.",
+    "1886": "1886",
+    "birth": "Nascita del marchio Cusi",
+    "birthDescription1": "Annibale Cusi cominciò a lavorare in giovanissima età come garzone di bottega, allora il mestiere si insegnava praticando fin dalla prima infanzia lavorando a stretto contatto con gli artigiani orafi. Per Annibale non fu diverso, iniziò a soli 9 anni e presto acquisì una certa esperienza, distinguendosi per le sue spiccate doti artistiche e abilità artigiane.",
+    "birthDescription2": "Il lungo periodo passato dietro ai banchi orafi permise al giovane di far proprio il mestiere, maturando in se anche quel coraggio e abilità imprenditoriale che a soli 23 anni e più precisamente nel 1886 lo spinsero a lasciare la bottega ed aprire un proprio laboratorio in via della Farine nel pieno centro di Milano a pochi passi dal Duomo e dal Teatro alla Scala.",
+    "quote": "Ogni gioiello ha la sua storia e rappresenta il lusso di oggi e con esso il tempo che dedichiamo a noi stessi. Qualunque oggetto tu scelga, sarà tuo, unico e irripetibile, come la tua vita.",
+    "wellBroochDescription1": "Nel proprio Atelier di Via delle Farine al numero 8 il giovane Annibale getterà le fondamenta che lo porteranno in pochi anni a fare del marchio Cusi uno dei brand più apprezzati dall’aristocrazia e dalla nobiltà Milanese.",
+    "wellBroochDescription2": "Il fervente arrivo dell’Art Nouveau a fine 800 rivitalizzò l’arte della gioielleria, riferendosi alla natura come principale soggetto ispiratore. In Europa fu una vera e propria rivoluzione dell’arte e a Milano lo stile Liberty non si fece attendere. Cusi in quegl’anni di bellezza da vita a collezioni di gioielli uniche e straordinarie, utilizzando materiali innovativi e gemme di colore rare.",
+    "wellBroochLight": "A sinistra, la famosa Spilla del Pozzo in platino e diamanti, insieme al suo design, creata da Annibale e ancora affettuosamente conservata dalla famiglia Cusi.",
+    "maryStuartNecklaceTitle": "La Collana di Maria Stuarda",
+    "maryStuartNecklaceDescription": "Nel 1906 Milano fu protagonista dell’Esposizione Internazionale, un vero successo, parteciparono infatti 40 stati e la città fu visitata da quasi 5 milioni di persone, un vero record per l’epoca. Nella sezione delle Arti Decorative Cusi espose i suoi gioielli, e vinse il Gran Premio grazie ad un capolavoro dell’arte orafa, il collier chiamato “Maria Stuarda”, un’opera che richiese due anni di lavoro da parte degli artigiani della bottega, che la realizzarono in “Platiuralium” una speciale lega inventata da Cusi composta da platino, oro, argento e alluminio con caratteristiche di leggerezza uniche. Il “Colletto” era tempestato di circa 15000 diamanti, perle e rubini. L’architettura era complessa in quanto tutte le parti erano snodate e permettevando quindi movimenti articolati. Chi scrisse su di essa la definì, nonostante l’imponenza, leggera come un pizzo.",
+    "viaClericiTitle": "Via Clerici, 1",
+    "viaClericiDescription": "Dopo la dolorosa parentesi della grande guerra 1915-18, Annibale CUSI divenuto ormai un esperto di fama internazionale nel campo delle pietre preziose e delle perle, riprese con rinnovata energia la sua attività e presto fu necessario ingrandirsi. Così che nel 1922 Annibale ed il figlio Rinaldo allora ventisettenne, fecero costruire in via Clerici 1 l’elegante Palazzo CUSI, sede propria della famiglia, dell’atelier di vendita e dei laboratori di produzione. Nel 1921 Annibale fu proclamato Cavaliere del Lavoro.",
+    "rinaldoCusiTitle": "Rinaldo Cusi",
+    "rinaldoCusiDescription": "Il marchio CUSI, nel ventennio del XX secolo fu apprezzato non solo dalle più importanti famiglie dell’aristocrazia milanese, ma anche dalla Famiglia Reale Italiana, tanto da vantare numerose collaborazioni per il Re,Vittorio Emanuele III, con S.A.R. Vittorio Emanuele il Conte di Torino ed il Duca di Aosta Amedeo di Savoia. I tre stemmi reali in quegl’anni decorano la carta intestata e il logo della Gioielleria Cusi.\n\nRinaldo seppe con grande abilità e carisma esportare il nostro stile anche all’estero, dove il mercato internazionale rispose con ampio consenso. Da sempre grande esperto e collezionista di gioielli, gemme preziose, ma sopratutto di perle, cedette in età al figlio Roberto CUSI il timone dell’azienda.",
+    "robertoCusiTitle": "Roberto Cusi",
+    "robertoCusiDescription": "Con Roberto CUSI (1926 – 1996), l’azienda si consolida e nel 1964 viene innaugurata l’esclusiva sede di Portofino, e dopo soli due anni anche l’attuale sede di Milano in via Montenapoleone al numero 21, location simbolo per eccellenza della moda e del lusso nel mondo. Successivamente nel 2004 nella filiale di Portofino CUSI diventa concessionario ufficiale ROLEX e nel 2013 vi dedica interamente un Atelier accanto alla propria gioielleria.",
+    "familyTitle": "La tradizione Cusi continua con le nuove generazioni.",
+    "familyIntro": "La storica gioielleria fondata nel 1886 da Annibale Cusi ha segnato l'inizio di un'era che dura da cinque generazioni; in questi 131 anni, Cusi è diventato uno dei nomi più prestigiosi tra i gioiellieri italiani.",
+    "familyDescription": "Oggi la tradizione della famiglia prosegue grazie all’impegno e la passione di Giorgio Nicola Cusi, della moglie Roberta Cusi e dei figli Alessia e Alessandro. Cusi non è solo un nome: è passione, professionalità, sicurezza, tradizione, è qualcosa di familiare; il nostro scopo è quello di far sentire i nostri clienti come a casa.\n\nQuesta breve retrospettiva che racconta la storia, l’evoluzione del concetto di gioielleria e di quanto siamo legati alla tradizione, mantenendo sì la qualità del passato, ma introducendo via via una prospettiva di attualità e design.‍L’alta gioielleria italiana basata su tradizione e innovazione, che si può ammirare nelle sedi di via Montenapoleone e di Portofino, fonde in sé le massime espressioni d’arte quali il disegno, la progettazione, la lavorazione artigianale, la cura del dettaglio e in più la ricerca di gemme rare provenienti dai più remoti angoli della terra. E’ con questa filosofia che la famiglia Cusi vuole tramandare la tradizione alle nuove generazioni."
+  },
+  "contactus": {
+    "contactUs": "Contattaci",
+    "availability": "I nostri consulenti personali sono disponibili per rispondere a qualsiasi domanda dal lunedì al venerdì dalle 9:00 alle 19:00 e il sabato dalle 9:00 alle 17:00.",
+    "customerService": "SERVIZIO CLIENTI",
+    "pressInquiries": "RICHIESTE STAMPA",
+    "bookAppointment": "PRENOTA UN APPUNTAMENTO",
+    "cusiMilano": "Cusi Milano",
+    "cusiPortofino": "Cusi Portofino",
+    "liveChat": "CHAT DAL VIVO",
+    "liveChatInfo": "Clicca qui per parlare in tempo reale con un esperto",
+    "bookOnline": "Clicca qui per prenotare un appuntamento online",
+    "email": "gioielleriacusiecommerce@gmail.com",
+    "phone": "(+39) 0266019768"
+  }
+
   }
 
