--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -57,6 +57,13 @@
      "animals_description":"I nostri oggetti preziosi sono realizzati con i migliori diamanti di laboratorio del mondo e un'eccezionale attenzione ad ogni dettaglio.",
      "sea":"Mare",
      "sea_description":"I nostri oggetti preziosi sono realizzati con i migliori diamanti di laboratorio del mondo e un'eccezionale attenzione ad ogni dettaglio.",
+
+     "zingara_description":"La morbidezza dell'oro e la finitura martellata unica danno vita a un affascinante gioco di luce e movimento.",
+     "tycoon_description":"Contemporaneità, energia e autorevolezza, forgiano l'uomo del futuro con materiali durevoli.",
+     "bollywood_description":"Gemme, linee decise, scene preziose immortalate nel lusso.",
+     "urania_description":"L'armonia delle orbite celesti catturata e impressa nei gioielli dei nostri maestri artigiani.",
+     "fleurie_description":"Dove l'eleganza abbraccia l'anima, trasformando ogni donna in un fiore prezioso, amato e speciale.",
+
      "filter":"Filtri",
      "sortby":"Ordina",
      "featured":"Tendenza",
@@ -78,6 +85,37 @@
      "platinum":"Platino",
      "apply":"APPLICA",
      "reset":"REIMPOSTA"
+    },
+    "itemdetails": {
+      "addtoshoppingbag":"ACQUISTA ORA",
+      "reference":"REFERENZA",
+      "orderbyphone":"ORDINA PER TELEFONO",
+      "bookanappointment":"PRENOTA UN APPUNTAMENTO",
+      "details":"DETTAGLI",
+      "shipping&returns":"SPEDIZIONI E RESI",
+      "soldout":"SOLD OUT",
+      "tax":"Tasse Incluse",
+      "selectquantity":"Seleziona la Quantità",
+      "shipping&returns_descriptions":"I resi e gli scambi sono gratuiti per gli ordini effettuati online, se richiesti entro 30 giorni dalla data di consegna. È possibile effettuare resi e scambi di persona presso una delle boutique selezionate della Maison. Vi invitiamo a chiamare i nostri consulenti personali per coordinare i servizi. Le creazioni personalizzate, incise o danneggiate non possono essere restituite. Dopo aver ricevuto il reso, la Maison effettuerà un controllo di qualità. Riceverai ulteriori informazioni durante tutto il processo e il rimborso sarà elaborato entro 14 giorni."
+    },
+    "checkout": {
+    "billinginformation":"Informazioni di Fatturazione",
+    "firstname":"Nome",
+    "lastname":"Cognome",
+    "country": "Paese",
+    "streetaddress": "Indirizzo",
+    "city":"Città",
+    "state":"Stato",
+    "zipcode":"Cap",
+    "next":"AVANTI",
+    "back":"INDIETRO",
+    "billing":"Fatturazione",
+    "contactinfo":"Informazioni di Contatto",
+    "placeorder": "PAGAMENTO",
+    "required":"obbligatorio",
+    "phonenumber":"Numero di Telefono"
+
+
     },
 
 
