--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -44,13 +44,13 @@
   },
   "prodotti":{
     "bracelets":"Bracciali",
-    "bracelets_description":"Dai classici bracciali ai modelli moderni, i nostri bracciali sono realizzati con i migliori diamanti di laboratorio del mondo e un'eccezionale attenzione ad ogni dettaglio.",
+    "bracelets_description":"I bracciali Cusi, originali e sofisticati, aggiungono un tocco di eleganza distintiva al polso. Ogni pezzo è creato con cura per offrire uno stile raffinato e senza tempo.",
     "rings":"Anelli",
-    "rings_description":"Dai classici anelli ai modelli moderni, i nostri anelli sono realizzati con i migliori diamanti di laboratorio del mondo e un'eccezionale attenzione ad ogni dettaglio.",
+    "rings_description":"Esplora la collezione di anelli Cusi, finemente realizzati con materiali di alta qualità e adornati con pietre scintillanti e gemme preziose. Ogni anello è un capolavoro unico che esalta la bellezza di chi lo indossa.",
     "necklaces":"Collane",
-    "necklaces_description":"Dalle classiche collane ai modelli moderni, le nostre collane sono realizzate con i migliori diamanti di laboratorio del mondo e un'eccezionale attenzione ad ogni dettaglio.",
+    "necklaces_description":"Le collane Cusi incarnano una vitalità e una luminosità inconfondibili, valorizzando il decolleté con materiali pregiati e un design ricercato. Perfette per chi desidera esprimere una personalità brillante.",
     "earrings":"Orecchini",
-    "earrings_description":"Dai classici orecchini ai modelli moderni, i nostri orecchini sono realizzati con i migliori diamanti di laboratorio del mondo e un'eccezionale attenzione ad ogni dettaglio.",
+    "earrings_description":"Gli orecchini Cusi, splendenti e raffinati, catturano l'essenza dell'eleganza. Con dettagli intricati e un tocco di lusso, ogni paio illumina il volto di chi li indossa, trasformando ogni momento in una celebrazione di stile.",
     "enamelledchains":"Catene Smaltate",
     "enamelledchains_description":"Le nostre catene smaltate sono realizzati con i migliori diamanti di laboratorio del mondo e un'eccezionale attenzione ad ogni dettaglio.",
     "animals":"Animali",
