--- a/src/locales/it/translation.json
+++ b/src/locales/it/translation.json
@@ -52,11 +52,11 @@
     "earrings":"Orecchini",
     "earrings_description":"Gli orecchini Cusi, splendenti e raffinati, catturano l'essenza dell'eleganza. Con dettagli intricati e un tocco di lusso, ogni paio illumina il volto di chi li indossa, trasformando ogni momento in una celebrazione di stile.",
     "enamelledchains":"Catene Smaltate",
-    "enamelledchains_description":"Le nostre catene smaltate sono realizzati con i migliori diamanti di laboratorio del mondo e un'eccezionale attenzione ad ogni dettaglio.",
+    "enamelledchains_description":"Le catene smaltate Cusi, vivaci e sofisticate, aggiungono un tocco di colore e unicità ad ogni look. Perfette per chi desidera distinguersi con stile.",
     "animals":"Animali",
-    "animals_description":"I nostri oggetti preziosi sono realizzati con i migliori diamanti di laboratorio del mondo e un'eccezionale attenzione ad ogni dettaglio.",
+    "animals_description":"Le sculture animali Cusi, dettagliate e affascinanti, portano un tocco di natura e maestria artigianale in ogni ambiente. Perfette per chi ama l'arte e la bellezza del regno animale.",
     "sea":"Mare",
-    "sea_description":"I nostri oggetti preziosi sono realizzati con i migliori diamanti di laboratorio del mondo e un'eccezionale attenzione ad ogni dettaglio.",
+    "sea_description":"I gioielli mare Cusi, ispirati alla bellezza degli oceani, evocano l'incanto delle onde e la serenità delle coste. Ideali per chi desidera portare con sé un pezzo di mare ovunque vada.",
 
     "zingara_description":"La morbidezza dell'oro e la finitura martellata unica danno vita a un affascinante gioco di luce e movimento.",
     "tycoon_description":"Contemporaneità, energia e autorevolezza, forgiano l'uomo del futuro con materiali durevoli.",
